# target-s3-parquet

./: README.md  meltano.yml  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml
target_s3_parquet/: data_type_generator.py  sanitizer.py  sinks.py  target.py
target_s3_parquet/tests/: test_core.py  test_data_transformation.py
