[tool.poetry]
name = "target-s3-parquet"
version = "0.0.1"
description = "`target-s3-parquet` is a Singer target for S3Parquet, built with the Meltano SDK for Singer Targets."
authors = ["Gupy"]
keywords = ["ELT", "S3Parquet"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.25.1"
singer-sdk = "^0.48.1"
awswrangler = "^3.0.0"
pandas = "^2.0.0"
pyarrow = "^23.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^22.3.0"
pydocstyle = "^6.1.1"
mypy = "^1.20.0"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3           # Vertical Hanging Indent
src_paths = "target_s3_parquet"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-s3-parquet = 'target_s3_parquet.target:TargetS3Parquet.cli'
